# robile_gazebo

./: CMakeLists.txt  README.md  package.xml
config/controller/: robile_platform_2_active_wheel_gazebo_ros_controllers.yaml  robile_platform_4_wheel_gazebo_ros_controllers.yaml  robile_platform_6_active_wheel_gazebo_ros_controllers.yaml
config/rviz/: robile.rviz
include/robile_gazebo/: KeloDrive.h  Robile.h  RobilePlatformController.h  SimpleController.h
launch/: 2_wheel_platform.launch  4_wheel_lidar_platform.launch  4_wheel_platform.launch  6_wheel_platform.launch  robile_platform_2_active_wheel.launch  robile_platform_4_active_wheel.launch  robile_platform_4_wheel.launch  robile_platform_6_active_wheel.launch
launch/platform_independent/: robile_gazebo.launch  simulation.launch  world.launch
robots/: robile_platform_2_active_wheel_gazebo.urdf.xacro  robile_platform_4_active_wheel_gazebo.urdf.xacro  robile_platform_4_wheel_gazebo.urdf.xacro  robile_platform_6_active_wheel_gazebo.urdf.xacro
src/: KeloDrive.cpp  Robile.cpp  RobilePlatformController.cpp  main.cpp
