<?xml version="1.0"?>
<package format="2">
    <name>robile_gazebo</name>
    <version>0.0.1</version>
    <description>Gazebo simulations for KELO robile robots</description>

    <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>
    <maintainer email="blumenthal@locomotec.com">Sebastian Blumenthal</maintainer>

    <license>GPLv3</license>

    <author email="sushant.chavan@locomotec.com">Sushant Chavan</author>
    <author email="dharmin.bakaraniya@locomotec.com">Dharmin B.</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <!-- <build_depend>kelo_tulip</build_depend> -->

    <exec_depend>robile_description</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>gazebo</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

</package>
